# Tusmo-solver

./: CMakeLists.txt  Makefile  README.md  main.cpp
bash/: generate.sh
french_set/: lst_mots.txt
src/: generate.cpp
